--- a/components/input/style/mixin.less
+++ b/components/input/style/mixin.less
@@ -22,7 +22,7 @@
   & when not (@theme = dark) {
     border-color: ~`colorPalette('@{color}', 5) `;
   }
-  border-right-width: @border-width-base !important;
+  border-right-width: @input-border-width !important;
   outline: 0;
   box-shadow: @input-outline-offset @outline-blur-size @outline-width fade(@color, @outline-fade);
 }
@@ -30,7 +30,7 @@
 // == when hoverd
 .hover(@color: @input-hover-border-color) {
   border-color: @color;
-  border-right-width: @border-width-base !important;
+  border-right-width: @input-border-width !important;
 }
 
 .disabled() {
@@ -53,11 +53,11 @@
   padding: @input-padding-vertical-base @input-padding-horizontal-base;
   color: @input-color;
   font-size: @font-size-base;
-  line-height: @line-height-base;
+  line-height: @input-line-height;
   background-color: @input-bg;
   background-image: none;
-  border: @border-width-base @border-style-base @input-border-color;
-  border-radius: @border-radius-base;
+  border: @input-border-width @border-style-base @input-border-color;
+  border-radius: @input-border-radius;
   transition: all 0.3s;
   .placeholder(); // Reset placeholder
 
@@ -96,7 +96,7 @@
     max-width: 100%; // prevent textearea resize from coming out of its container
     height: auto;
     min-height: @input-height-base;
-    line-height: @line-height-base;
+    line-height: @input-line-height;
     vertical-align: bottom;
     transition: all 0.3s, height 0s;
   }
@@ -180,8 +180,8 @@
     font-size: @font-size-base;
     text-align: center;
     background-color: @input-addon-bg;
-    border: @border-width-base @border-style-base @input-border-color;
-    border-radius: @border-radius-base;
+    border: @input-border-width @border-style-base @input-border-color;
+    border-radius: @input-border-radius;
     transition: all 0.3s;
 
     // Reset Select's style in addon
@@ -191,7 +191,7 @@
       &.@{ant-prefix}-select-single:not(.@{ant-prefix}-select-customize-input)
         .@{ant-prefix}-select-selector {
         background-color: inherit;
-        border: @border-width-base @border-style-base transparent;
+        border: @input-border-width @border-style-base transparent;
         box-shadow: none;
       }
 
@@ -300,7 +300,7 @@
     &-wrap,
     > .@{inputClass} {
       &:not(:first-child):not(:last-child) {
-        border-right-width: @border-width-base;
+        border-right-width: @input-border-width;
 
         &:hover {
           z-index: 1;
@@ -328,8 +328,8 @@
     }
 
     & > *:not(:last-child) {
-      margin-right: -@border-width-base;
-      border-right-width: @border-width-base;
+      margin-right: -@input-border-width;
+      border-right-width: @input-border-width;
     }
 
     // Undo float for .ant-input-group .ant-input
@@ -345,7 +345,7 @@
     & > .@{ant-prefix}-mention-wrapper .@{ant-prefix}-mention-editor,
     & > .@{ant-prefix}-time-picker .@{ant-prefix}-time-picker-input,
     & > .@{ant-prefix}-input-group-wrapper .@{ant-prefix}-input {
-      border-right-width: @border-width-base;
+      border-right-width: @input-border-width;
       border-radius: 0;
 
       &:hover {
@@ -373,8 +373,8 @@
     & > .@{ant-prefix}-cascader-picker:first-child .@{ant-prefix}-input,
     & > .@{ant-prefix}-mention-wrapper:first-child .@{ant-prefix}-mention-editor,
     & > .@{ant-prefix}-time-picker:first-child .@{ant-prefix}-time-picker-input {
-      border-top-left-radius: @border-radius-base;
-      border-bottom-left-radius: @border-radius-base;
+      border-top-left-radius: @input-border-radius;
+      border-bottom-left-radius: @input-border-radius;
     }
 
     & > *:last-child,
@@ -385,9 +385,9 @@
     & > .@{ant-prefix}-cascader-picker-focused:last-child .@{ant-prefix}-input,
     & > .@{ant-prefix}-mention-wrapper:last-child .@{ant-prefix}-mention-editor,
     & > .@{ant-prefix}-time-picker:last-child .@{ant-prefix}-time-picker-input {
-      border-right-width: @border-width-base;
-      border-top-right-radius: @border-radius-base;
-      border-bottom-right-radius: @border-radius-base;
+      border-right-width: @input-border-width;
+      border-top-right-radius: @input-border-radius;
+      border-bottom-right-radius: @input-border-radius;
     }
 
     // https://github.com/ant-design/ant-design/issues/12493
