--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -715,28 +715,37 @@
 
 // Tabs
 // ---
-@tabs-card-head-background: @background-color-light;
+@tabs-border-radius: 4px;
+@tabs-card-head-background: #f5f5fa;
+@tabs-card-tab-first-margin: 4px;
+@tabs-card-active-background: @component-background;
+@tabs-card-active-font-weight: 500;
 @tabs-card-height: 40px;
-@tabs-card-active-color: @primary-color;
+@tabs-card-active-color: #101015;
 @tabs-card-horizontal-padding: (@tabs-card-height - floor(@font-size-base * @line-height-base)) / 2 -
   @border-width-base @padding-md;
 @tabs-card-horizontal-padding-sm: 6px @padding-md;
 @tabs-card-horizontal-padding-lg: 7px @padding-md 6px;
+@tabs-card-border: none;
+@tabs-title-color: #8a8b99;
 @tabs-title-font-size: @font-size-base;
 @tabs-title-font-size-lg: @font-size-lg;
 @tabs-title-font-size-sm: @font-size-base;
 @tabs-ink-bar-color: @primary-color;
+@tabs-ink-bar-height: 3px;
 @tabs-bar-margin: 0 0 @margin-md 0;
 @tabs-horizontal-margin: 0 32px 0 0;
 @tabs-horizontal-margin-rtl: 0 0 0 32px;
 @tabs-horizontal-padding: @padding-sm 0;
 @tabs-horizontal-padding-lg: @padding-md 0;
 @tabs-horizontal-padding-sm: @padding-xs 0;
+@tabs-nav-list-margin-top: 4px;
 @tabs-vertical-padding: @padding-xs @padding-lg;
 @tabs-vertical-margin: 0 0 @margin-md 0;
 @tabs-scrolling-size: 32px;
-@tabs-highlight-color: @primary-color;
-@tabs-hover-color: @primary-5;
+@tabs-highlight-color: #101015;
+@tabs-hover-color: #5f5f6b;
+@tabs-hover-background: rgba(255, 255, 255, 0.6);
 @tabs-active-color: @primary-7;
 @tabs-card-gutter: 2px;
 @tabs-card-tab-active-border-top: 2px solid transparent;
