--- a/components/tabs/style/card.less
+++ b/components/tabs/style/card.less
@@ -5,16 +5,23 @@
 .@{tab-prefix-cls}-card {
   > .@{tab-prefix-cls}-nav,
   > div > .@{tab-prefix-cls}-nav {
+    background: @tabs-card-head-background;
+
     .@{tab-prefix-cls}-tab {
       margin: 0;
       padding: @tabs-card-horizontal-padding;
       background: @tabs-card-head-background;
-      border: @border-width-base @border-style-base @border-color-split;
+      border: @tabs-card-border;
       transition: all @animation-duration-slow @ease-in-out;
+
+      &:first-child {
+        margin-left: @tabs-card-tab-first-margin;
+      }
 
       &-active {
         color: @tabs-card-active-color;
-        background: @component-background;
+        background: @tabs-card-active-background;
+        font-weight: @tabs-card-active-font-weight;
       }
     }
 
@@ -38,7 +45,7 @@
     > .@{tab-prefix-cls}-nav,
     > div > .@{tab-prefix-cls}-nav {
       .@{tab-prefix-cls}-tab {
-        border-radius: @border-radius-base @border-radius-base 0 0;
+        border-radius: @tabs-border-radius @tabs-border-radius 0 0;
 
         &-active {
           border-bottom-color: @component-background;
@@ -50,7 +57,7 @@
     > .@{tab-prefix-cls}-nav,
     > div > .@{tab-prefix-cls}-nav {
       .@{tab-prefix-cls}-tab {
-        border-radius: 0 0 @border-radius-base @border-radius-base;
+        border-radius: 0 0 @tabs-border-radius @tabs-border-radius;
 
         &-active {
           border-top-color: @component-background;
@@ -74,7 +81,7 @@
     > .@{tab-prefix-cls}-nav,
     > div > .@{tab-prefix-cls}-nav {
       .@{tab-prefix-cls}-tab {
-        border-radius: @border-radius-base 0 0 @border-radius-base;
+        border-radius: @tabs-border-radius 0 0 @tabs-border-radius;
 
         &-active {
           border-right-color: @component-background;
@@ -86,7 +93,7 @@
     > .@{tab-prefix-cls}-nav,
     > div > .@{tab-prefix-cls}-nav {
       .@{tab-prefix-cls}-tab {
-        border-radius: 0 @border-radius-base @border-radius-base 0;
+        border-radius: 0 @tabs-border-radius @tabs-border-radius 0;
 
         &-active {
           border-left-color: @component-background;
