--- a/components/tabs/style/position.less
+++ b/components/tabs/style/position.less
@@ -19,7 +19,7 @@
       }
 
       .@{tab-prefix-cls}-ink-bar {
-        height: 2px;
+        height: @tabs-ink-bar-height;
 
         &-animated {
           transition: width @animation-duration-slow, left @animation-duration-slow,
