--- a/components/pagination/style/index.less
+++ b/components/pagination/style/index.less
@@ -5,7 +5,7 @@
 @pagination-prefix-cls: ~'@{ant-prefix}-pagination';
 
 .@{pagination-prefix-cls} {
-  .reset-component;
+  .reset-component(@pagination-text-color);
 
   ul,
   ol {
@@ -51,7 +51,7 @@
     a {
       display: block;
       padding: 0 6px;
-      color: @text-color;
+      color: @pagination-item-color;
       transition: none;
 
       &:hover {
@@ -74,17 +74,16 @@
       border-color: @primary-color;
 
       a {
-        color: @primary-color;
+        color: @pagination-item-color-active;
       }
 
       &:focus,
       &:hover {
-        border-color: @primary-5;
       }
 
       &:focus a,
       &:hover a {
-        color: @primary-5;
+        color: @pagination-item-color-hover;
       }
     }
   }
@@ -167,13 +166,13 @@
     outline: 0;
 
     button {
-      color: @text-color;
+      color: @pagination-item-color;
       cursor: pointer;
       user-select: none;
     }
 
     &:hover button {
-      border-color: @primary-5;
+      border-color: @pagination-item-color-hover;
     }
 
     .@{pagination-prefix-cls}-item-link {
@@ -302,13 +301,21 @@
   &.mini &-item {
     min-width: @pagination-item-size-sm;
     height: @pagination-item-size-sm;
-    margin: 0;
+    margin: 0 @pagination-item-size-sm / 4 0 0;
     line-height: @pagination-item-size-sm - 2px;
+    border-radius: @pagination-item-size-sm / 2;
   }
 
   &.mini &-item:not(&-item-active) {
     background: transparent;
     border-color: transparent;
+
+    &:hover {
+      background: @pagination-item-bg-hover-sm;
+      a {
+        color: @pagination-item-color-hover-sm;
+      }
+    }
   }
 
   &.mini &-prev,
