--- a/components/style/mixins/reset.less
+++ b/components/style/mixins/reset.less
@@ -1,10 +1,10 @@
 @import '../themes/index';
 
-.reset-component() {
+.reset-component(@color: @text-color) {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: @text-color;
+  color: @color;
   font-size: @font-size-base;
   font-variant: @font-variant-base;
   line-height: @line-height-base;
