--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -132,7 +132,7 @@
 
 // Border color
 @border-color-base: #d7d8e0; // base border outline a component
-@border-color-split: hsv(0, 0, 94%); // split border inside a component
+@border-color-split: rgba(215, 216, 224, 0.6); // split border inside a component
 @border-color-inverse: @white;
 @border-width-base: 1px; // width of the border for a component
 @border-style-base: solid; // style of a components border
@@ -581,11 +581,12 @@
 // Table
 // --
 @table-bg: @component-background;
-@table-header-bg: @background-color-light;
-@table-header-color: @heading-color;
+@table-border-color-split: @border-color-split;
+@table-header-bg: rgba(245, 245, 250, 0.8);
+@table-header-color: #8a8b99;
 @table-header-sort-bg: @background-color-base;
 @table-body-sort-bg: #fafafa;
-@table-row-hover-bg: @background-color-light;
+@table-row-hover-bg: #f5f5fa;
 @table-selected-row-color: inherit;
 @table-selected-row-bg: @primary-1;
 @table-body-selected-sort-bg: @table-selected-row-bg;
@@ -604,6 +605,7 @@
 @table-font-size: @font-size-base;
 @table-font-size-md: @table-font-size;
 @table-font-size-sm: @table-font-size;
+@table-text-color: #3e3e47;
 // Sorter
 // Legacy: `table-header-sort-active-bg` is used for hover not real active
 @table-header-sort-active-bg: darken(@table-header-bg, 3%);
@@ -790,16 +792,22 @@
 // Pagination
 // ---
 @pagination-item-bg: @component-background;
+@pagination-item-bg-hover-sm: rgba(215, 216, 224, 0.4);
+@pagination-item-color-hover-sm: @pagination-item-color;
 @pagination-item-size: @height-base;
 @pagination-item-size-sm: 24px;
 @pagination-font-family: @font-family;
 @pagination-font-weight-active: 500;
-@pagination-item-bg-active: @component-background;
+@pagination-item-bg-active: @primary-color;
+@pagination-item-color: #8a8b99;
+@pagination-item-color-active: #fff;
+@pagination-item-color-hover: #fff;
 @pagination-item-link-bg: @component-background;
 @pagination-item-disabled-color-active: @white;
 @pagination-item-disabled-bg-active: darken(@disabled-bg, 10%);
 @pagination-item-input-bg: @component-background;
 @pagination-mini-options-size-changer-top: 0px;
+@pagination-text-color: #8a8b99;
 
 // PageHeader
 // ---
