--- a/components/table/style/bordered.less
+++ b/components/table/style/bordered.less
@@ -1,7 +1,7 @@
 @import './index';
 @import './size';
 
-@table-border: @border-width-base @border-style-base @border-color-split;
+@table-border: @border-width-base @border-style-base @table-border-color-split;
 
 .@{table-prefix-cls}.@{table-prefix-cls}-bordered {
   // ============================ Title =============================
