--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -25,6 +25,7 @@
   font-size: @table-font-size;
   background: @table-bg;
   border-radius: @border-radius-base;
+  color: @table-text-color;
 
   // https://github.com/ant-design/ant-design/issues/17611
   table {
