button styles update

--- a/components/modal/style/modal.less
+++ b/components/modal/style/modal.less
@@ -78,7 +78,7 @@
   }
 
   &-body {
-    padding: @modal-body-padding;
+    padding: 0 @modal-body-padding;
     font-size: @font-size-base;
     line-height: @line-height-base;
     word-wrap: break-word;
