--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -14,8 +14,8 @@
 @info-color: @primary-color;
 @success-color: @green-6;
 @processing-color: @blue-6;
-@error-color: @red-5;
-@highlight-color: @red-5;
+@error-color: @red-6;
+@highlight-color: @red-6;
 @warning-color: @gold-6;
 @normal-color: #d9d9d9;
 @white: #fff;
@@ -76,7 +76,7 @@
 
 // vertical paddings
 @padding-lg: 24px; // containers
-@padding-md: 16px; // small containers and buttons
+@padding-md: 20px; // small containers and buttons
 @padding-sm: 12px; // Form controls and items
 @padding-xs: 8px; // small items
 @padding-xss: 4px; // more small
@@ -503,12 +503,13 @@
 
 // Modal
 // --
-@modal-header-padding-vertical: @padding-md;
-@modal-header-padding-horizontal: @padding-lg;
-@modal-body-padding: @padding-lg;
+@modal-border-width: 0px;
+@modal-header-padding-vertical: 30px;
+@modal-header-padding-horizontal: 30px;
+@modal-body-padding: 30px;
 @modal-header-bg: @component-background;
 @modal-header-padding: @modal-header-padding-vertical @modal-header-padding-horizontal;
-@modal-header-border-width: @border-width-base;
+@modal-header-border-width: @modal-border-width;
 @modal-header-border-style: @border-style-base;
 @modal-header-title-line-height: 22px;
 @modal-header-title-font-size: @font-size-lg;
@@ -520,9 +521,9 @@
 @modal-footer-bg: transparent;
 @modal-footer-border-color-split: @border-color-split;
 @modal-footer-border-style: @border-style-base;
-@modal-footer-padding-vertical: 10px;
-@modal-footer-padding-horizontal: 16px;
-@modal-footer-border-width: @border-width-base;
+@modal-footer-padding-vertical: 22px;
+@modal-footer-padding-horizontal: 30px;
+@modal-footer-border-width: @modal-border-width;
 @modal-mask-bg: fade(@black, 45%);
 @modal-confirm-body-padding: 32px 32px 24px;
 
