--- a/components/radio/style/index.less
+++ b/components/radio/style/index.less
@@ -50,7 +50,7 @@
   .@{radio-prefix-cls}-wrapper:hover &,
   &:hover .@{radio-inner-prefix-cls},
   &-input:focus + .@{radio-inner-prefix-cls} {
-    border-color: @radio-dot-color;
+    border-color: @radio-button-hover-border-color;
   }
 
   &-input:focus + .@{radio-inner-prefix-cls} {
@@ -78,7 +78,7 @@
 
   &-inner {
     &::after {
-      @radio-dot-size: @radio-size - 8px;
+      @radio-dot-size: @radio-size - 10px;
 
       position: absolute;
       top: (@radio-size - @radio-dot-size) / 2 - 1px;
@@ -125,7 +125,8 @@
 // 选中状态
 .@{radio-prefix-cls}-checked {
   .@{radio-inner-prefix-cls} {
-    border-color: @radio-dot-color;
+    background-color: @radio-button-checked-bg;
+    border-color: @radio-button-checked-bg !important;
     &::after {
       transform: scale(1);
       opacity: 1;
@@ -232,7 +233,7 @@ span.@{radio-prefix-cls} + * {
 
   &:hover {
     position: relative;
-    color: @radio-dot-color;
+    color: @radio-button-hover-color;
   }
 
   &:focus-within {
@@ -250,21 +251,22 @@ span.@{radio-prefix-cls} + * {
 
   &-checked:not(&-disabled) {
     z-index: 1;
-    color: @radio-dot-color;
-    background: @radio-button-checked-bg;
-    border-color: @radio-dot-color;
+    color: @radio-button-checked-bg;
+    background: @radio-dot-color;
+    border-color: @radio-button-checked-bg;
 
     &::before {
-      background-color: @radio-dot-color;
+      background-color: @radio-button-checked-bg;
     }
 
     &:first-child {
-      border-color: @radio-dot-color;
+      border-color: @radio-button-checked-bg;
     }
 
     &:hover {
       color: @radio-button-hover-color;
       border-color: @radio-button-hover-color;
+      //background-color: @radio-button-hover-color;
       &::before {
         background-color: @radio-button-hover-color;
       }
@@ -285,8 +287,8 @@ span.@{radio-prefix-cls} + * {
 
   .@{radio-group-prefix-cls}-solid &-checked:not(&-disabled) {
     color: @radio-solid-checked-color;
-    background: @radio-dot-color;
-    border-color: @radio-dot-color;
+    background: @radio-button-checked-bg;
+    border-color: @radio-button-checked-bg;
     &:hover {
       color: @radio-solid-checked-color;
       background: @radio-button-hover-color;
