--- a/components/message/style/index.less
+++ b/components/message/style/index.less
@@ -20,28 +20,46 @@
 
   &-notice-content {
     display: inline-block;
-    padding: @message-notice-content-padding;
     background: @message-notice-content-bg;
     border-radius: @border-radius-base;
     box-shadow: @shadow-2;
     pointer-events: all;
+    color: @text-color-inverse;
+
+    .@{message-prefix-cls}-custom-content {
+      border-radius: @border-radius-base;
+      padding: @message-notice-content-padding;
+    }
+
+    .@{message-prefix-cls}-success {
+      background-color: @success-color;
+    }
+
+    .@{message-prefix-cls}-error {
+      background-color: @error-color;
+    }
+
+    .@{message-prefix-cls}-warning {
+      background-color: @warning-color;
+    }
+
+    .@{message-prefix-cls}-info,
+    .@{message-prefix-cls}-loading {
+      background-color: @info-color;
+    }
   }
 
   &-success .@{iconfont-css-prefix} {
-    color: @success-color;
   }
 
   &-error .@{iconfont-css-prefix} {
-    color: @error-color;
   }
 
   &-warning .@{iconfont-css-prefix} {
-    color: @warning-color;
   }
 
   &-info .@{iconfont-css-prefix},
   &-loading .@{iconfont-css-prefix} {
-    color: @info-color;
   }
 
   .@{iconfont-css-prefix} {
