--- a/components/style/color/colors.less
+++ b/components/style/color/colors.less
@@ -37,7 +37,7 @@
 @cyan-9: color(~`colorPalette('@{cyan-6}', 9) `);
 @cyan-10: color(~`colorPalette('@{cyan-6}', 10) `);
 
-@green-base: #52c41a;
+@green-base: #0dd170;
 @green-1: color(~`colorPalette('@{green-6}', 1) `);
 @green-2: color(~`colorPalette('@{green-6}', 2) `);
 @green-3: color(~`colorPalette('@{green-6}', 3) `);
@@ -74,7 +74,7 @@
 @pink-9: color(~`colorPalette('@{pink-6}', 9) `);
 @pink-10: color(~`colorPalette('@{pink-6}', 10) `);
 
-@red-base: #f5222d;
+@red-base: #f74c60;
 @red-1: color(~`colorPalette('@{red-6}', 1) `);
 @red-2: color(~`colorPalette('@{red-6}', 2) `);
 @red-3: color(~`colorPalette('@{red-6}', 3) `);
@@ -146,7 +146,7 @@
 @lime-9: color(~`colorPalette('@{lime-6}', 9) `);
 @lime-10: color(~`colorPalette('@{lime-6}', 10) `);
 
-@gold-base: #faad14;
+@gold-base: #faae0a;
 @gold-1: color(~`colorPalette('@{gold-6}', 1) `);
 @gold-2: color(~`colorPalette('@{gold-6}', 2) `);
 @gold-3: color(~`colorPalette('@{gold-6}', 3) `);
