--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -11,7 +11,7 @@
 
 // -------- Colors -----------
 @primary-color: @blue-6;
-@info-color: @primary-color;
+@info-color: @blue-5;
 @success-color: @green-6;
 @processing-color: @blue-6;
 @error-color: @red-6;
@@ -147,7 +147,7 @@
 @background-color-base: hsv(0, 0, 96%); // Default grey background color
 
 // Disabled states
-@disabled-color: fade(#000, 25%);
+@disabled-color: #a4a5b3;
 @disabled-inner-color: #fff;
 @disabled-bg: @background-color-base;
 @disabled-color-dark: fade(#fff, 35%);
@@ -636,10 +636,11 @@
 // ---
 @picker-bg: @component-background;
 @picker-basic-cell-hover-color: @item-hover-bg;
-@picker-basic-cell-active-with-range-color: @primary-1;
-@picker-basic-cell-hover-with-range-color: lighten(@primary-color, 35%);
+@picker-basic-cell-active-with-range-color: @primary-color;
+@picker-basic-cell-hover-with-range-color: lighten(@primary-color, 15%);
 @picker-basic-cell-disabled-bg: @disabled-bg;
 @picker-border-color: @border-color-split;
+@picker-cell-today-bg: @primary-1;
 @picker-date-hover-range-border-color: lighten(@primary-color, 20%);
 @picker-date-hover-range-color: @picker-basic-cell-hover-with-range-color;
 @picker-time-panel-cell-height: 28px;
