finish tooltip, popover, notification styles

--- a/components/popover/style/index.less
+++ b/components/popover/style/index.less
@@ -78,7 +78,7 @@
 
   &-inner-content {
     padding: @padding-sm @popover-padding-horizontal;
-    color: @popover-color;
+    color: @popover-content-color;
   }
 
   &-message {
