--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -200,7 +200,7 @@
 @btn-font-size-sm: @font-size-base;
 @btn-padding-horizontal-base: @padding-md - 1px;
 @btn-padding-horizontal-lg: @btn-padding-horizontal-base;
-@btn-padding-horizontal-sm: @padding-xs - 1px;
+@btn-padding-horizontal-sm: @padding-sm - 1px;
 
 @btn-height-base: @height-base;
 @btn-height-lg: @height-lg;
@@ -475,15 +475,16 @@
 // Tooltip max width
 @tooltip-max-width: 250px;
 // Tooltip text color
-@tooltip-color: #fff;
+@tooltip-color: #3e3e47;
 // Tooltip background color
-@tooltip-bg: rgba(0, 0, 0, 0.75);
+@tooltip-bg: #fff;
 // Tooltip arrow width
 @tooltip-arrow-width: 5px;
 // Tooltip distance with trigger
 @tooltip-distance: @tooltip-arrow-width - 1px + 4px;
 // Tooltip arrow color
 @tooltip-arrow-color: @tooltip-bg;
+@tooltip-font-size: 12px;
 
 // Popover
 // ---
@@ -491,6 +492,7 @@
 @popover-bg: @component-background;
 // Popover text color
 @popover-color: @text-color;
+@popover-content-color: rgba(0, 0, 0, 0.65);
 // Popover maximum width
 @popover-min-width: 177px;
 @popover-min-height: 32px;
@@ -1011,8 +1013,8 @@
 // Notification
 // ---
 @notification-bg: @component-background;
-@notification-padding-vertical: 16px;
-@notification-padding-horizontal: 24px;
+@notification-padding-vertical: 22px;
+@notification-padding-horizontal: 30px;
 
 //  Result
 // ---
