--- a/components/tooltip/style/index.less
+++ b/components/tooltip/style/index.less
@@ -20,6 +20,7 @@
   display: block;
   max-width: @tooltip-max-width;
   visibility: visible;
+  font-size: @tooltip-font-size;
 
   &-hidden {
     display: none;
@@ -53,7 +54,7 @@
   &-inner {
     min-width: 30px;
     min-height: 32px;
-    padding: 6px 8px;
+    padding: 8px 12px;
     color: @tooltip-color;
     text-align: left;
     text-decoration: none;
