--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -262,6 +262,7 @@
 @radio-size: 18px;
 @radio-top: 0px;
 @radio-dot-color: @btn-default-bg;
+@radio-checked-color: @primary-6;
 @radio-dot-disabled-color: fade(@black, 20%);
 @radio-solid-checked-color: @component-background;
 
@@ -753,7 +754,7 @@
 @tabs-vertical-padding: @padding-xs @padding-lg;
 @tabs-vertical-margin: 0 0 @margin-md 0;
 @tabs-scrolling-size: 32px;
-@tabs-highlight-color: #101015;
+@tabs-highlight-color: @tabs-card-active-color;
 @tabs-hover-color: #5f5f6b;
 @tabs-hover-background: rgba(255, 255, 255, 0.6);
 @tabs-active-color: @primary-7;
