--- a/components/button/style/mixin.less
+++ b/components/button/style/mixin.less
@@ -67,7 +67,7 @@
   &:hover,
   &:focus {
     & when (@theme = dark) {
-      .button-color(@primary-5; @background; @primary-5);
+      .button-color(@color; @background; @btn-hover-border-color);
     }
     & when not (@theme = dark) {
       .button-color(
@@ -78,7 +78,7 @@
   }
   &:active {
     & when (@theme = dark) {
-      .button-color(@primary-7; @background; @primary-7);
+      .button-color(@color; @background; @btn-hover-border-color);
     }
     & when not (@theme = dark) {
       .button-color(
