--- a/components/button/style/mixin.less
+++ b/components/button/style/mixin.less
@@ -35,7 +35,7 @@
   &:focus {
     & when (@theme = dark) {
       .button-color(
-        @color; ~`colorPalette('@{background}', 7) `; ~`colorPalette('@{background}', 7) `
+        @color; ~`colorPalette('@{background}', 5) `; ~`colorPalette('@{background}', 5) `
       );
     }
     & when not (@theme = dark) {
@@ -48,7 +48,7 @@
   &:active {
     & when (@theme = dark) {
       .button-color(
-        @color; ~`colorPalette('@{background}', 5) `; ~`colorPalette('@{background}', 5) `
+        @color; ~`colorPalette('@{background}', 7) `; ~`colorPalette('@{background}', 7) `
       );
     }
     & when not (@theme = dark) {
@@ -78,7 +78,7 @@
   }
   &:active {
     & when (@theme = dark) {
-      .button-color(@color; @background; @btn-hover-border-color);
+      .button-color(@color; @btn-active-bg; @btn-hover-border-color);
     }
     & when not (@theme = dark) {
       .button-color(
@@ -259,7 +259,6 @@
   &:focus,
   &:active {
     text-decoration: none;
-    background: @btn-default-bg;
   }
 }
 // ghost button style
