change table style

--- a/components/style/themes/dark.less
+++ b/components/style/themes/dark.less
@@ -332,6 +332,7 @@
 @table-expanded-row-bg: @table-header-bg;
 @table-filter-dropdown-bg: @popover-background;
 @table-expand-icon-bg: transparent;
+@table-selected-row-hover-bg: @table-row-hover-bg;
 @table-text-color: @white;
 
 // Tabs
