--- a/components/tree-select/style/index.less
+++ b/components/tree-select/style/index.less
@@ -11,21 +11,20 @@
 .@{tree-select-prefix-cls} {
   // ======================= Dropdown =======================
   &-dropdown {
-    padding: @padding-xs (@padding-xs / 2) 0;
+    padding: @padding-sm;
 
     &-rtl {
       direction: rtl;
     }
     // ======================== Tree ========================
     .@{select-tree-prefix-cls} {
-      border-radius: 0;
+      border-radius: 2px;
+      border: @border-width-base solid @select-tree-border-color;
 
       &-list-holder-inner {
         align-items: stretch;
 
         .@{select-tree-prefix-cls}-treenode {
-          padding-bottom: @padding-xs;
-
           .@{select-tree-prefix-cls}-node-content-wrapper {
             flex: auto;
           }
