--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -437,14 +437,14 @@
 @select-dropdown-vertical-padding: @dropdown-vertical-padding;
 @select-dropdown-font-size: @dropdown-font-size;
 @select-dropdown-line-height: @dropdown-line-height;
-@select-dropdown-height: 32px;
+@select-dropdown-height: 34px;
 @select-background: @component-background;
 @select-clear-background: @select-background;
 @select-selection-item-bg: @background-color-base;
 @select-selection-item-border-color: @border-color-split;
 @select-single-item-height-lg: 40px;
 @select-multiple-item-height: @input-height-base - @input-padding-vertical-base * 2; // Normal 24px
-@select-multiple-item-height-lg: 32px;
+@select-multiple-item-height-lg: 34px;
 @select-multiple-item-spacing-half: ceil(@input-padding-vertical-base / 2);
 @select-multiple-disabled-background: @input-disabled-bg;
 @select-multiple-item-disabled-color: #bfbfbf;
@@ -497,7 +497,7 @@
 @popover-content-color: rgba(0, 0, 0, 0.65);
 // Popover maximum width
 @popover-min-width: 177px;
-@popover-min-height: 32px;
+@popover-min-height: 34px;
 // Popover arrow width
 @popover-arrow-width: 6px;
 // Popover arrow color
@@ -867,12 +867,17 @@
 // Tree
 // ---
 @tree-bg: @component-background;
-@tree-title-height: 24px;
+@tree-title-height: 34px;
+@tree-indent-width: 18px;
+@tree-switcher-width: 24px;
 @tree-child-padding: 18px;
 @tree-directory-selected-color: #fff;
 @tree-directory-selected-bg: @primary-color;
 @tree-node-hover-bg: @item-hover-bg;
 @tree-node-selected-bg: @primary-2;
+
+// Tree-Select
+@select-tree-border-color: rgba(95, 95, 107, 0.8);
 
 // Collapse
 // ---
