add button of tabs remove border

--- a/components/tabs/style/index.less
+++ b/components/tabs/style/index.less
@@ -84,8 +84,7 @@
       min-width: @tabs-card-height;
       padding: 0 @padding-xs;
       background: @tabs-card-head-background;
-      border: @border-width-base @border-style-base @border-color-split;
-      border-radius: @tabs-border-radius @tabs-border-radius 0 0;
+      border: none;
       outline: none;
       cursor: pointer;
       transition: all @animation-duration-slow @ease-in-out;
