update cascader selected color to primary-color

--- a/components/style/themes/dark.less
+++ b/components/style/themes/dark.less
@@ -297,6 +297,7 @@
 // ---
 @cascader-bg: transparent;
 @cascader-menu-bg: @popover-background;
+@cascader-item-selected-bg: @primary-color;
 @cascader-menu-border-color-split: @border-color-split;
 
 // Tooltip
