add tab bottom line

--- a/components/tabs/style/card.less
+++ b/components/tabs/style/card.less
@@ -7,6 +7,10 @@
   > div > .@{tab-prefix-cls}-nav {
     background: @tabs-card-head-background;
 
+    &:before {
+      border-bottom: none;
+    }
+
     .@{tab-prefix-cls}-tab {
       margin: 0;
       padding: @tabs-card-horizontal-padding;
