--- a/components/tabs/style/position.less
+++ b/components/tabs/style/position.less
@@ -14,6 +14,7 @@
         position: absolute;
         right: 0;
         left: 0;
+        border-bottom: @border-width-base @border-style-base @border-color-split;
         content: '';
       }
 
