change button disabled style

--- a/components/button/style/mixin.less
+++ b/components/button/style/mixin.less
@@ -58,7 +58,7 @@
     }
   }
 
-  .button-disabled();
+  .button-disabled(@background: fade(@background, 40%), @border: transparent);
 }
 
 .button-variant-other(@color; @background; @border) {
