--- a/components/style/themes/dark.less
+++ b/components/style/themes/dark.less
@@ -218,7 +218,7 @@
 @btn-primary-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
 @btn-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
 
-@btn-default-bg: @component-background;
+@btn-default-bg: transparent;
 @btn-active-bg: #3e3e47;
 
 @btn-default-ghost-color: @text-color;
